--- a/inacap/index.html
+++ b/inacap/index.html
@@ -2,8 +2,126 @@
 <html lang="es">
     <head>
         <title>INACAP</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-
+        <!-- Barra de navegación -->
+        <nav class="navbar navbar-light bg-dark">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="img/logo-blanco.png" alt="" width="175" height="78">
+              </a>
+            </div>
+          </nav>
+        <!-- Carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/bienvenida-alumnos-prop-1.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/exalumno-destacado-ceremonia.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Sede-la-granja.jpeg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- Medidas Covid -->
+        <div>Medidas covid</div>
+        <!-- Noticias-->
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/800x600_imagen_noticia-x2Db.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Miércoles 13 de abril: Te invitamos a la ceremonia de premiación del Reconocimiento Exalumno Destacado 2021</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/Sede-x20la-x20Granja_800.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Nueva Sede de INACAP en La Granja abre sus puertas y da la bienvenida a estudiantes en este Año Académico 2022</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/Inacapinos.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Estudiantes de INACAP Sede Santiago Centro representarán a Chile en final mundial de competencia TIC de Huawei</p>
+                    </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+        <!-- Diplomado -->
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Diplomado de educación continua</h3>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <img src="img/Miniatura-Logistica.png" alt="" width="300px">
+              </div>
+              <div class="col">
+                <h5>Logística</h5>
+                <ul>
+                    <li> Diplomado en Gestión de Abastecimiento y Operaciones Logística</li>
+                    <li> Diplomado en Gestión de Transporte y Distribución</li>
+                </ul>
+              </div>
+              <div class="col">
+                <img src="img/Miniatura-Mineria.png" alt="" width="300px">
+              </div>
+              <div class="col">
+                <h5>Minería</h5>
+                <ul>
+                    <li>Diplomado en Gestión Sostenible aplicado a la minería</li>
+                    <li>Diplomado en Gestión de Plantas Mineras
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        <!-- Organización -->
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Organización</h3>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div>
+          </div>
     </body>
 </html>
